--- a/config
+++ b/config
@@ -11,6 +11,8 @@
 
 set $mod Mod4
 
+exec feh --bg-scale /home/jiqissc/imgs/debian.jpg
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -152,12 +154,28 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
+mode "system" {
+    bindsym l exec --no-startup-id ~/.i3/i3exit lock, mode "default"
+    bindsym e exec --no-startup-id ~/.i3/i3exit logout, mode "default"
+    bindsym s exec --no-startup-id ~/.i3/i3exit suspend, mode "default"
+    bindsym h exec --no-startup-id ~/.i3/i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id ~/.i3/i3exit reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id ~/.i3/i3exit shutdown, mode "default"
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+Escape mode "system"
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
         position top
         workspace_buttons yes
-	mode hide
+        mode hide
 }
 
