--- a/config
+++ b/config
@@ -11,7 +11,7 @@
 
 set $mod Mod4
 
-exec feh --bg-scale /home/jiqissc/imgs/debian.jpg
+exec feh --bg-center /home/jiqissc/imgs/debian.jpg
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
